// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingBar /> should render with value 0 1`] = `
<span
  aria-valuemax="1"
  aria-valuemin="0"
  aria-valuenow={0}
  className="loading_bar"
  role="progressbar"
/>
`;

exports[`<LoadingBar /> should render with value 0.5 1`] = `
<span
  aria-valuemax="1"
  aria-valuemin="0"
  aria-valuenow={0.5}
  className="loading_bar"
  role="progressbar"
/>
`;

exports[`<LoadingBar /> should render with value 1 1`] = `
<span
  aria-valuemax="1"
  aria-valuemin="0"
  aria-valuenow={1}
  className="loading_bar"
  role="progressbar"
/>
`;
